--- a/LoRaWAN_End_Node/LoRaWAN_End_Node.ioc
+++ b/LoRaWAN_End_Node/LoRaWAN_End_Node.ioc
@@ -112,40 +112,42 @@ Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
 Mcu.Pin0=PA12
 Mcu.Pin1=PB15
-Mcu.Pin10=PC5
-Mcu.Pin11=PB12
-Mcu.Pin12=PB1
-Mcu.Pin13=PC4
-Mcu.Pin14=PB0-VDD_TCXO
-Mcu.Pin15=PC6
-Mcu.Pin16=PA1
-Mcu.Pin17=PB11
-Mcu.Pin18=OSC_IN
-Mcu.Pin19=PA3
+Mcu.Pin10=PB2
+Mcu.Pin11=PB6
+Mcu.Pin12=PC5
+Mcu.Pin13=PB12
+Mcu.Pin14=PB1
+Mcu.Pin15=PC4
+Mcu.Pin16=PB0-VDD_TCXO
+Mcu.Pin17=PC6
+Mcu.Pin18=PA1
+Mcu.Pin19=PB11
 Mcu.Pin2=PC14-OSC32_IN
-Mcu.Pin20=PA2
-Mcu.Pin21=VP_ADC_TempSens_Input
-Mcu.Pin22=VP_ADC_Vref_Input
-Mcu.Pin23=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin24=VP_LORAWAN_VS_LoRaWAN
-Mcu.Pin25=VP_MISC_VS_MISC
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_RTC_VS_RTC_Calendar
-Mcu.Pin28=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin29=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin20=OSC_IN
+Mcu.Pin21=PA3
+Mcu.Pin22=PA2
+Mcu.Pin23=VP_ADC_TempSens_Input
+Mcu.Pin24=VP_ADC_Vref_Input
+Mcu.Pin25=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin26=VP_LORAWAN_VS_LoRaWAN
+Mcu.Pin27=VP_MISC_VS_MISC
+Mcu.Pin28=VP_RTC_VS_RTC_Activate
+Mcu.Pin29=VP_RTC_VS_RTC_Calendar
 Mcu.Pin3=PA11
-Mcu.Pin30=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin31=VP_SYS_VS_None
-Mcu.Pin32=VP_TIMER_VS_TIMER
-Mcu.Pin33=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin34=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjHumTemp_5.6.0_10.0.0
-Mcu.Pin4=PB9
-Mcu.Pin5=PC15-OSC32_OUT
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0
-Mcu.Pin8=PB13
-Mcu.Pin9=PB2
-Mcu.PinsNb=35
+Mcu.Pin30=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin31=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin32=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin33=VP_SYS_VS_None
+Mcu.Pin34=VP_TIMER_VS_TIMER
+Mcu.Pin35=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin36=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjHumTemp_5.6.0_10.0.0
+Mcu.Pin4=PB7
+Mcu.Pin5=PB9
+Mcu.Pin6=PC15-OSC32_OUT
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0
+Mcu.Pin9=PB13
+Mcu.PinsNb=37
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.10.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
@@ -232,6 +234,10 @@ PB15.Signal=GPIO_Output
 PB2.Locked=true
 PB2.Mode=IN4
 PB2.Signal=ADC_IN4
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label
 PB9.GPIO_Label=LED2
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
