--- a/LoRaWAN_End_Node/LoRaWAN_End_Node.ioc
+++ b/LoRaWAN_End_Node/LoRaWAN_End_Node.ioc
@@ -10,7 +10,7 @@ ADC.Rank-0\#ChannelRegularConversion=1
 ADC.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
 ADC.SamplingTimeCommon1=ADC_SAMPLETIME_160CYCLES_5
 ADC.SamplingTimeCommon2=ADC_SAMPLETIME_160CYCLES_5
-ADC.SelectedChannel=ADC_CHANNEL_4|ADC_CHANNEL_5|ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT
+ADC.SelectedChannel=ADC_CHANNEL_3|ADC_CHANNEL_4|ADC_CHANNEL_5|ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -112,42 +112,45 @@ Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
 Mcu.Pin0=PA12
 Mcu.Pin1=PB15
-Mcu.Pin10=PB2
-Mcu.Pin11=PB6
-Mcu.Pin12=PC5
-Mcu.Pin13=PB12
-Mcu.Pin14=PB1
-Mcu.Pin15=PC4
-Mcu.Pin16=PB0-VDD_TCXO
-Mcu.Pin17=PC6
-Mcu.Pin18=PA1
-Mcu.Pin19=PB11
+Mcu.Pin10=PC3
+Mcu.Pin11=PA0
+Mcu.Pin12=PB13
+Mcu.Pin13=PB2
+Mcu.Pin14=PB6
+Mcu.Pin15=PC5
+Mcu.Pin16=PB12
+Mcu.Pin17=PB1
+Mcu.Pin18=PC4
+Mcu.Pin19=PB0-VDD_TCXO
 Mcu.Pin2=PC14-OSC32_IN
-Mcu.Pin20=OSC_IN
-Mcu.Pin21=PA3
-Mcu.Pin22=PA2
-Mcu.Pin23=VP_ADC_TempSens_Input
-Mcu.Pin24=VP_ADC_Vref_Input
-Mcu.Pin25=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin26=VP_LORAWAN_VS_LoRaWAN
-Mcu.Pin27=VP_MISC_VS_MISC
-Mcu.Pin28=VP_RTC_VS_RTC_Activate
-Mcu.Pin29=VP_RTC_VS_RTC_Calendar
+Mcu.Pin20=PC6
+Mcu.Pin21=PA1
+Mcu.Pin22=PB11
+Mcu.Pin23=OSC_IN
+Mcu.Pin24=PA3
+Mcu.Pin25=PA2
+Mcu.Pin26=VP_ADC_TempSens_Input
+Mcu.Pin27=VP_ADC_Vref_Input
+Mcu.Pin28=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin29=VP_LORAWAN_VS_LoRaWAN
 Mcu.Pin3=PA11
-Mcu.Pin30=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin31=VP_SEQUENCER_M4_VS_SEQUENCER
-Mcu.Pin32=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin33=VP_SYS_VS_None
-Mcu.Pin34=VP_TIMER_VS_TIMER
-Mcu.Pin35=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin36=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjHumTemp_5.6.0_10.0.0
-Mcu.Pin4=PB7
-Mcu.Pin5=PB9
-Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin7=PC3
-Mcu.Pin8=PA0
-Mcu.Pin9=PB13
-Mcu.PinsNb=37
+Mcu.Pin30=VP_MISC_VS_MISC
+Mcu.Pin31=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_RTC_VS_RTC_Calendar
+Mcu.Pin33=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin34=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin35=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin36=VP_SYS_VS_None
+Mcu.Pin37=VP_TIMER_VS_TIMER
+Mcu.Pin38=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin39=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjHumTemp_5.6.0_10.0.0
+Mcu.Pin4=PB3
+Mcu.Pin5=PB4
+Mcu.Pin6=PB7
+Mcu.Pin7=PB9
+Mcu.Pin8=PC15-OSC32_OUT
+Mcu.Pin9=PB5
+Mcu.PinsNb=40
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.10.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
@@ -234,6 +237,13 @@ PB15.Signal=GPIO_Output
 PB2.Locked=true
 PB2.Mode=IN4
 PB2.Signal=ADC_IN4
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Mode=IN3
+PB4.Signal=ADC_IN3
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.Locked=true
